# ch32v006_playground

ch32v006_blinky/: Cargo.toml  link-highcode.ld  memory.ld  recover.sh  run.sh
ch32v006_blinky/.cargo/: config.toml
ch32v006_blinky/src/: main.rs
ch32v006_ufmt/: Cargo.toml  rust-toolchain.toml
ch32v006_ufmt/src/: main.rs  sdiprint_ufmt.rs
