cargo-features = ["panic-immediate-abort"]

[package]
name = "ch32v006_ufmt"
version = "0.1.0"
edition = "2024"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", rev = "2d3875bb90f96e253f5086ef92555fd2a20e4ede", version = "0.1.0", features = [
    "ch32v006k8u6",
    # "ch32v006f8p6",
    "memory-x",
    "embassy",
    "time-driver-tim2",
    "rt",
] }
qingke = { version = "0.6.1", features = ["critical-section-impl", "defmt"] }
qingke-rt = { version = "0.6.1", features = ["highcode"] }

embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-time = "0.5.0"

embedded-hal = "1.0.0"
ufmt = "0.2.0"
# If you don't want panic messages, use this instead of the custom panic handler in main
# panic-halt = "1.0"

[profile.release]
strip = false
debug = 2
lto = "fat"
opt-level = "s"
panic = "abort"
codegen-units = 1

# immediate-abort is so much smaller, but you lose panic messages.
# it's not worth it during development, but since we're on nightly it is an option for release
# panic = "immediate-abort"

[profile.dev]
overflow-checks = false
debug = 2
opt-level = "s"
lto = true
panic = "abort"
